src/tests/snapshots/crates_io__tests__user__email_legacy_get_and_put.snap
---
source: src/tests/user.rs
expression: json.user
---
{
  "id": 1,
  "login": "foo",
  "emails": [
    {
      "id": 1,
      "email": "foo@example.com",
      "verified": true,
      "verification_email_sent": true,
      "primary": true
    },
    {
      "id": 2,
      "email": "mango@mangos.mango",
      "verified": false,
      "verification_email_sent": true,
      "primary": false
    }
  ],
  "name": null,
  "email_verified": true,
  "email_verification_sent": true,
  "email": "foo@example.com",
  "avatar": null,
  "url": "https://github.com/foo",
  "is_admin": false,
  "publish_notifications": true
}
